--- a/src/partials/blogs.html
+++ b/src/partials/blogs.html
@@ -1,30 +1,43 @@
-<section id="blog">
-  <h2>Our Best Blogs Ever</h2>
-  <p>“Try our blog to find the best tips and tricks to select your gift”</p>
-  <div>
-    <img src="./images/blogs.jpg" alt="married" width="400" />
-    <div>
-      <p>Mr. John Doe</p>
-      <h3>The best way to wish your wife</h3>
-      <a href="/">Read More</a>
+<section class="blog" id="blog">
+  <div class="container">
+    <h2 class="blog__title">Our Best Blogs Ever</h2>
+    <p class="blog__text">
+      “Try our blog to find the best tips and tricks to select your gift”
+    </p>
+    <div class="single-block">
+      <img
+        class="single-block__img"
+        src="./images/blogs.jpg"
+        alt="married"
+        width="400"
+      />
+      <div class="single-block__content">
+        <p class="single-block__name">Mr. John Doe</p>
+        <h3 class="single-block__title">The best way to wish your wife</h3>
+        <a class="single-block__link" href="/">Read More</a>
+      </div>
     </div>
+    <ul class="blog__list">
+      <li class="blog__item">
+        <h3 class="blog__name">
+          Database to find the gifts for your girlfriend
+        </h3>
+        <p class="blog__descr">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore...
+        </p>
+        <a class="blog__link" href="/">Read More</a>
+      </li>
+      <li class="blog__item">
+        <h3 class="blog__name">
+          How Artificial Intelligence read your mind to find the best gift
+        </h3>
+        <p class="blog__descr">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore...
+        </p>
+        <a class="blog__link" href="/">Read More</a>
+      </li>
+    </ul>
   </div>
-  <ul>
-    <li>
-      <h3>Database to find the gifts for your girlfriend</h3>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore...
-      </p>
-      <a href="/">Read More</a>
-    </li>
-    <li>
-      <h3>How Artificial Intelligence read your mind to find the best gift</h3>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore...
-      </p>
-      <a href="/">Read More</a>
-    </li>
-  </ul>
 </section>
