--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,42 +1,47 @@
-<footer>
-  <ul>
-    <li><a href="#header">Home</a></li>
-    <li><a href="#about">About</a></li>
-  </ul>
-  <a href="#header">logo</a>
-  <ul>
-    <li><a href="#services">Service</a></li>
-    <li><a href="#blog">Blog</a></li>
-  </ul>
-  <ul>
-    <li>
-      <svg width="40" height="40">
-        <use href="./images/sprite.svg#fb"></use>
-      </svg>
-    </li>
-    <li>
-      <svg width="40" height="40">
-        <use href="./images/sprite.svg#tw"></use>
-      </svg>
-    </li>
-    <li>
-      <svg width="40" height="40">
-        <use href="./images/sprite.svg#inst"></use>
-      </svg>
-    </li>
-    <li>
-      <svg width="40" height="40">
-        <use href="./images/sprite.svg#youtube"></use>
-      </svg>
-    </li>
-    <li>
-      <svg width="40" height="40">
-        <use href="./images/sprite.svg#pint"></use>
-      </svg>
-    </li>
-  </ul>
-  <div>
-    <p>&#64; 2010 — 2020</p>
-    <a href="">Privacy — Terms</a>
+<footer class="footer">
+  <div class="container">
+    <div class="footer__nav">
+      <ul class="footer__list footer__list--first">
+        <li><a href="#header">Home</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
+      <a class="logo footer__logo" href="#header">logo</a>
+      <ul class="footer__list footer__list--second">
+        <li><a href="#services">Service</a></li>
+        <li><a href="#blog">Blog</a></li>
+      </ul>
+    </div>
+    <div class="liner"></div>
+    <ul class="soclist">
+      <li class="soclist__item">
+        <svg width="40" height="40">
+          <use href="./images/sprite.svg#fb"></use>
+        </svg>
+      </li>
+      <li class="soclist__item">
+        <svg width="40" height="40">
+          <use href="./images/sprite.svg#tw"></use>
+        </svg>
+      </li>
+      <li class="soclist__item">
+        <svg width="40" height="40">
+          <use href="./images/sprite.svg#inst"></use>
+        </svg>
+      </li>
+      <li class="soclist__item">
+        <svg width="40" height="40">
+          <use href="./images/sprite.svg#youtube"></use>
+        </svg>
+      </li>
+      <li class="soclist__item">
+        <svg width="40" height="40">
+          <use href="./images/sprite.svg#pint"></use>
+        </svg>
+      </li>
+    </ul>
+    <div class="policy">
+      <p>&#64; 2010 — 2020</p>
+      <a href="">Privacy — Terms</a>
+    </div>
   </div>
 </footer>
