--- a/src/partials/ready.html
+++ b/src/partials/ready.html
@@ -1,8 +1,20 @@
-<section>
-  <p>Ready to get started?</p>
-  <h2>Sign up or contact us</h2>
-  <ul>
-    <li><button type="button">Find gift now</button></li>
-    <li><button type="button">How it works</button></li>
-  </ul>
+<section class="ready">
+  <div class="container ready__container">
+    <div class="ready__content">
+      <p class="ready__text">Ready to get started?</p>
+      <h2 class="ready__title">Sign up or contact us</h2>
+    </div>
+    <ul class="ready__list">
+      <li class="ready__item">
+        <button class="button ready__button--first" type="button">
+          Find gift now
+        </button>
+      </li>
+      <li class="ready__item">
+        <button class="button ready__button--second" type="button">
+          How it works
+        </button>
+      </li>
+    </ul>
+  </div>
 </section>
