--- a/src/partials/services.html
+++ b/src/partials/services.html
@@ -1,34 +1,122 @@
-<section id="services">
-  <h2>Gifts for all Occasions</h2>
-  <p>“Try our web app to find the best gifts for all occasions”</p>
-  <ul>
-    <li>
-      <a href="/"
-        ><img src="./images/birthday.jpg" alt="birthday" width="270" />
-        <h3>Birthday</h3>
-        <p>See More &#62;</p></a
-      >
-    </li>
-    <li>
-      <a href="/"
-        ><img src="./images/anniversal.jpg" alt="universal" width="270" />
-        <h3>Anniversary</h3>
-        <p>See More &#62;</p></a
-      >
-    </li>
-    <li>
-      <a href="/"
-        ><img src="./images/valentine.jpg" alt="valentine-day" width="270" />
-        <h3>Valentine's Day</h3>
-        <p>See More &#62;</p></a
-      >
-    </li>
-    <li>
-      <a href="/"
-        ><img src="./images/christmas.jpg" alt="christmas" width="270" />
-        <h3>Christmas</h3>
-        <p>See More &#62;</p></a
-      >
-    </li>
-  </ul>
+<section class="services" id="services">
+  <div class="container services__container">
+    <h2 class="services__title">Gifts for all Occasions</h2>
+    <p class="services__text">
+      “Try our web app to find the best gifts for all occasions”
+    </p>
+    <ul class="services__list">
+      <li class="card">
+        <a class="card__link" href="/">
+          <img
+            class="card__img"
+            src="./images/birthday.jpg"
+            alt="birthday"
+            width="270"
+          />
+          <div class="card__content">
+            <h3 class="card__title">Birthday</h3>
+            <p class="card__text">See More &#62;</p>
+          </div>
+        </a>
+      </li>
+      <li class="card">
+        <a class="card__link" href="/">
+          <img
+            class="card__img"
+            src="./images/anniversal.jpg"
+            alt="universal"
+            width="270"
+          />
+          <div class="card__content">
+            <h3 class="card__title">Anniversary</h3>
+            <p class="card__text">See More &#62;</p>
+          </div>
+        </a>
+      </li>
+      <li class="card">
+        <a class="card__link" href="/">
+          <img
+            class="card__img"
+            src="./images/valentine.jpg"
+            alt="valentine-day"
+            width="270"
+          />
+          <div class="card__content">
+            <h3 class="card__title">Valentine's Day</h3>
+            <p class="card__text">See More &#62;</p>
+          </div>
+        </a>
+      </li>
+      <li class="card">
+        <a class="card__link" href="/">
+          <img
+            class="card__img"
+            src="./images/christmas.jpg"
+            alt="christmas"
+            width="270"
+          />
+          <div class="card__content">
+            <h3 class="card__title">Christmas</h3>
+            <p class="card__text">See More &#62;</p>
+          </div>
+        </a>
+      </li>
+      <!-- <li class="card">
+        <a class="card__link" href="/">
+          <img
+            class="card__img"
+            src="./images/birthday.jpg"
+            alt="birthday"
+            width="270"
+          />
+          <div class="card__content">
+            <h3 class="card__title">Birthday</h3>
+            <p class="card__text">See More &#62;</p>
+          </div>
+        </a>
+      </li>
+      <li class="card">
+        <a class="card__link" href="/">
+          <img
+            class="card__img"
+            src="./images/anniversal.jpg"
+            alt="universal"
+            width="270"
+          />
+          <div class="card__content">
+            <h3 class="card__title">Anniversary</h3>
+            <p class="card__text">See More &#62;</p>
+          </div>
+        </a>
+      </li>
+      <li class="card">
+        <a class="card__link" href="/">
+          <img
+            class="card__img"
+            src="./images/valentine.jpg"
+            alt="valentine-day"
+            width="270"
+          />
+          <div class="card__content">
+            <h3 class="card__title">Valentine's Day</h3>
+            <p class="card__text">See More &#62;</p>
+          </div>
+        </a>
+      </li>
+      <li class="card">
+        <a class="card__link" href="/">
+          <img
+            class="card__img"
+            src="./images/christmas.jpg"
+            alt="christmas"
+            width="270"
+          />
+          <div class="card__content">
+            <h3 class="card__title">Christmas</h3>
+            <p class="card__text">See More &#62;</p>
+          </div>
+        </a>
+      </li> -->
+    </ul>
+  </div>
 </section>
