--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,13 +1,20 @@
-<section id="about">
-  <img src="./images/about-us.jpg" alt="letter with thanks" width="721" />
-  <div>
-    <h2>How we work</h2>
-    <p>
-      We’ve actually already asked hundreds of women what they want, and made a
-      database with the results. All you have to do is take our short survey
-      that only takes seconds, and our proprietary algorithm will match you with
-      a few perfect gift options.
-    </p>
-    <button>Learn More</button>
+<section class="about" id="about">
+  <div class="container about__container">
+    <img
+      class="about__img"
+      src="./images/about-us.jpg"
+      alt="letter with thanks"
+      width="721"
+    />
+    <div class="about__content">
+      <h2 class="about__title">How we work</h2>
+      <p class="about__text">
+        We’ve actually already asked hundreds of women what they want, and made
+        a database with the results. All you have to do is take our short survey
+        that only takes seconds, and our proprietary algorithm will match you
+        with a few perfect gift options.
+      </p>
+      <button class="button about__button" type="button">Learn More</button>
+    </div>
   </div>
 </section>
