--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,12 +1,22 @@
-<header id="header">
-  <a href="/">logo</a>
-  <nav>
-    <ul>
-      <li><a href="#header">Home</a></li>
-      <li><a href="#about">About Us</a></li>
-      <li><a href="#services">Services</a></li>
-      <li><a href="#blog">Blogs</a></li>
-    </ul>
-  </nav>
-  <button type="button">Gift finder</button>
+<header class="header" id="header">
+  <div class="container header__container">
+    <a
+      class="logo header__logo animate__animated animate__heartBeat animate__repeat-3"
+      href="/"
+      >logo</a
+    >
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__item"><a class="nav__link" href="#header">Home</a></li>
+        <li class="nav__item">
+          <a class="nav__link" href="#about">About Us</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="#services">Services</a>
+        </li>
+        <li class="nav__item"><a class="nav__link" href="#blog">Blogs</a></li>
+      </ul>
+    </nav>
+    <button class="button header__button" type="button">Gift finder</button>
+  </div>
 </header>
