--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,8 +1,17 @@
-<section>
-  <div>
-    <h1>Find a gift for your wife or girlfriend</h1>
-    <p>Struggling to find a gift for your wife or girlfriend? No problem!</p>
-    <button type="button">Find gift now</button>
+<section class="hero">
+  <div class="container hero__container">
+    <div class="hero__content">
+      <h1 class="hero__title">Find a gift for your wife or girlfriend</h1>
+      <p class="hero__text">
+        Struggling to find a gift for your wife or girlfriend? No problem!
+      </p>
+      <button class="button hero__button" type="button">Find gift now</button>
+    </div>
+    <img
+      class="hero__img"
+      src="./images/hero.jpg"
+      alt="happy boy and girl"
+      width="719"
+    />
   </div>
-  <img src="./images/hero.jpg" alt="happy boy and girl" width="719" />
 </section>
