--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -4,3 +4,19 @@ body {
   font-family: 'Roboto', sans-serif;
   color: $mainColor;
 }
+
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.logo {
+  font-family: 'Homemade Apple', sans-serif;
+  font-size: 18px;
+  line-height: 2.17;
+}
+
+.button {
+  border-radius: 5px;
+  text-transform: uppercase;
+}
