--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 ul,
 ol {
   list-style: none;
@@ -8,6 +12,11 @@ ol {
 a {
   color: inherit;
   text-decoration: none;
+
+  &:hover,
+  &:focus {
+    text-decoration: underline;
+  }
 }
 
 h1,
@@ -24,6 +33,10 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+button {
+  cursor: pointer;
 }
 
 // скрытие контента
