--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,13 @@
 @import './variables';
+@import './mixins';
 @import './common';
 @import './reset';
+
+// sections-styles
+@import './header';
+@import './hero';
+@import './about';
+@import './services';
+@import './ready';
+@import './blog';
+@import './footer';
