add modal, slick, animation

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,6 +17,8 @@
         <li class="nav__item"><a class="nav__link" href="#blog">Blogs</a></li>
       </ul>
     </nav>
-    <button class="button header__button" type="button">Gift finder</button>
+    <button class="button header__button" type="button" data-modal-open>
+      Gift finder
+    </button>
   </div>
 </header>
