--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,7 +5,9 @@
       <p class="hero__text">
         Struggling to find a gift for your wife or girlfriend? No problem!
       </p>
-      <button class="button hero__button" type="button">Find gift now</button>
+      <button class="button hero__button" type="button" data-modal-open>
+        Find gift now
+      </button>
     </div>
     <img
       class="hero__img"
@@ -13,5 +15,13 @@
       alt="happy boy and girl"
       width="719"
     />
+  </div>
+  <div
+    class="slick-slider"
+    style="width: 400px; margin: 0 auto; padding: 40px 0"
+  >
+    <img src="./images/first.jpg" />
+    <img src="./images/second.jpg" />
+    <img src="./images/third.jpg" />
   </div>
 </section>
