--- a/src/partials/ready.html
+++ b/src/partials/ready.html
@@ -6,7 +6,11 @@
     </div>
     <ul class="ready__list">
       <li class="ready__item">
-        <button class="button ready__button--first" type="button">
+        <button
+          class="button ready__button--first"
+          type="button"
+          data-modal-open
+        >
           Find gift now
         </button>
       </li>
